es-data.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: es-data
  labels:
    component: elasticsearch
    role: data
spec:
  serviceName: elasticsearch-data
  replicas: 3
  template:
    metadata:
      labels:
        component: elasticsearch
        role: data
    spec:
      containers:
      - name: es-data
        securityContext:
          # FIXME: original code had something about mmapping and
          # such, need to add it back.
          capabilities:
            add:
              - IPC_LOCK
        image: docker.elastic.co/elasticsearch/elasticsearch:5.2.2
        imagePullPolicy: Always
        ports:
          - containerPort: 9300
            name: transport
            protocol: TCP
          - containerPort: 9200
            name: http
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 60
        volumeMounts:
          - name: storage
            mountPath: /usr/share/elasticsearch/data
          - name: config-volume
            mountPath: /usr/share/elasticsearch/config
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config-volume
          configMap:
            name: elasticsearch-config
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
