es-head.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: es-head
  labels:
    component: es-head
spec:
  replicas: 1
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        component: es-head
    spec:
      containers:
      - name: es-head
        image: mobz/elasticsearch-head:5
        imagePullPolicy: Always
        ports:
          - containerPort: 9100
            name: http
            protocol: TCP
