es-master.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: es-master
  labels:
    component: elasticsearch
    role: master
spec:
  # Do not forget to change minimum_master_nodes if changing this
  replicas: 3
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        component: elasticsearch
        role: master
    spec:
      containers:
      - name: es-master
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        image: docker.elastic.co/elasticsearch/elasticsearch:5.2.1
        imagePullPolicy: Always
        ports:
          - containerPort: 9300
            name: transport
            protocol: TCP
          - containerPort: 9200
            name: http
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 60
        volumeMounts:
          - name: storage
            mountPath: /usr/share/elasticsearch/data
          - name: config-volume
            mountPath: /usr/share/elasticsearch/config

      volumes:
          - emptyDir:
              medium: ""
            name: storage
          - name: config-volume
            configMap:
              name: elasticsearch-config
