es-head-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-head
  labels:
    component: es-head
spec:
  selector:
    component: es-head
  ports:
  - name: http
    port: 9100
    protocol: TCP
