es-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
spec:
  rules:
    - host: es.192.168.150.220.xip.io
      http:
        paths:
          - backend:
              serviceName: elasticsearch
              servicePort: 9200
            path: /
